--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
   list-style: none;
   text-decoration: none;
   font-family: 'Oswald', Verdana, Arial, sans-serif;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 
 }
 
