--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,7 +45,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(135deg, rgba(138, 175, 239, 0) 0%, rgb(177, 214, 241) 100%);
+  background: linear-gradient(135deg, rgba(138, 175, 239, 0) 0%, #b1d6f1 100%);
   border-radius: 15px;
 }
 
@@ -73,4 +73,5 @@ body {
 
 #logo-hover {
   background: none !important;
+  /* background-color: #b1d6f18a; */
 }
